samples/_failures_safe/1761404167_b37547_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ede0f14.c: In function ‘next_token’:
./samples/SAFE/__tmp_4ede0f14.c:162:9: error: expected expression at end of input
  162 |         if (token.value == NULL)
      |         ^~
./samples/SAFE/__tmp_4ede0f14.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ede0f14.c:162:9: error: expected declaration or statement at end of input
